# AlgorithmAndDataStructure

bai1_sorting/: .gitignore  CMakeLists.txt
bai1_sorting/includes/: CMakeLists.txt  Timer.cpp
bai1_sorting/src/: main.cpp
bai2_8_queens_problem/: .gitignore  CMakeLists.txt
bai2_8_queens_problem/src/: main.cpp
bai3_find_word/: .gitignore  CMakeLists.txt
bai3_find_word/src/: keywords.txt  main.cpp  paragraphs.txt
